--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,11 +8,12 @@
     <title>MyServer</title>
 </head>
 <body>
-    <p>Before</p>
 
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs')%>
     <%- body %>
 
-    <p>After</p>
+
 
 
 </body>
