--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,6 +11,7 @@
 
     <%- include('../partials/header.ejs') %>
     <%- include('../partials/errorMessage.ejs')%>
+<!--  用來載入Router指定頁面  -->
     <%- body %>
 
 
