--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,25 +1,21 @@
-<h2>Search Books</h2>
-<form action="/books" method="get">
+<h2>Search Book</h2>
+<form action="/books" method="GET">
     <div>
-    <label>Title</label>
-    <input type="text" name ="title" value="<%= searchOptions.title %>">
+        <label>Title</label>
+        <input type="text" name="title" value="<%= searchOptions.title %>">
     </div>
-
     <div>
-        <label>Publish After</label>
-        <input type="date" name ="publishAfter" value="<%= searchOptions.publishAfter %>">
+        <label>Published After</label>
+        <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
     </div>
-
     <div>
-        <label>Publish Before</label>
-        <input type="date" name ="publishBefore" value="<%= searchOptions.publishBefore %>">
+        <label>Published Before</label>
+        <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
     </div>
-
     <button type="submit">Search</button>
 </form>
-<br>
 <div>
     <% books.forEach(book => { %>
-        <img height="150" , width="100" src="<%= book.coverImagePath %>">
+        <img height="150" width="100" src="<%= book.coverImagePath %>">
     <% }) %>
 </div>
