--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
+<h2>Recent Added</h2>
+
 <div>
     <% books.forEach(book => { %>
+            <a href="/books/<%= book.id%>">
                 <img height="150" , width="100" src="<%= book.coverImagePath %>">
+            </a>
     <% }) %>
+
 </div>
